--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body{
     background-color: darksalmon;
+    color: #333;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
 }
 
@@ -14,5 +16,9 @@ input[type="radio"]{
 
 #btn, p, .btn{
     padding: 10px;
-    margin: 10px;
+    margin: 30px 10px 0;
+}
+
+.btn{
+    font-size: 32px;
 }
